tests/ui/missing/missing-main.rs
<<<<<<< HEAD
//@ error-pattern: `main` function not found
fn mian() { }

// ferrocene-annotations: fls_maw4u1o8q37u
// Crates
//
// ferrocene-annotations: fls_8jb3sjqamdpu
// Program Entry Point
=======
fn mian() { } //~ ERROR `main` function not found in crate `missing_main`
>>>>>>> pull-upstream-temp--do-not-use-for-real-code
